# fortran-learning

./: .gitignore  CMakeLists.txt  Makefile  check_mod.f90  loop.f90  means.f90  quad_solver.f90  write_netcdf.f90
apps/: CMakeLists.txt  write_netcdf.f90
src/: CMakeLists.txt  checkStatus_mod.f90  write_netcdf.f90
